--- a/templateusingcss.html
+++ b/templateusingcss.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webpage</title>
-    <link href="/css/templateusingcss.css" rel="stylesheet">
+    <link href="/css/template.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 <body>
