--- a/webpage.html
+++ b/webpage.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webpage</title>
-    <link href="/css/webpage.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link href="css/webpage.css" rel="stylesheet">
 </head>
+
 <body>
 
     <div class="container1">
@@ -20,22 +20,22 @@
             <div class="bar">
                 <ul class="menubar">
                     <li>
-                        <a href="#">MENU</a>
+                        <a href="#">Menu</a>
                         <ul class="menus">
                             <li>
-                                <a href="#">ABOUT</a>
+                                <a href="#">About</a>
                             </li>
                             <li>
-                                <a href="#">SERVICES</a>
+                                <a href="#">Services</a>
                             </li>
                             <li>
-                                <a href="#">FOLIO</a>
+                                <a href="#">Folio</a>
                             </li>
                             <li>
-                                <a href="#">BLOG</a>
+                                <a href="#">Blog</a>
                             </li>
                             <li>
-                                <a href="#">CONTACT</a>
+                                <a href="#">Contact</a>
                             </li>
                         </ul>
                     </li>
@@ -43,19 +43,19 @@
             </div>
             <div class="menu">
                 <div class="link">
-                    <a href="#">ABOUT</a>
+                    <a href="#">About</a>
                 </div>
                 <div class="link">
-                    <a href="#">SERVICES</a>
+                    <a href="#">Services</a>
                 </div>
                 <div class="link">
-                    <a href="#">FOLIO</a>
+                    <a href="#">Folio</a>
                 </div>
                 <div class="link">
-                    <a href="#">BLOG</a>
+                    <a href="#">Blog</a>
                 </div>
                 <div class="link">
-                    <a href="#">CONTACT</a>
+                    <a href="#">Contact</a>
                 </div>
             </div>
         </div>
@@ -64,22 +64,22 @@
         <div class="content2">
             <div class="images">
                 <div>
-                    <img src="/images/flower.jpg" class="one">
+                    <img src="images/flower1.jpg" class="one">
                 </div>
                 <div>
-                    <img src="/images/flower1.jpg" class="two">
+                    <img src="images/flower2.jpg" class="two">
                 </div>
                 <div>
-                    <img src="/images/flower2.jpg" class="three">
+                    <img src="images/flower3.jpg" class="three">
                 </div>
                 <div>
-                    <img src="/images/flower3.jpg" class="four">
+                    <img src="images/flower4.jpg" class="four">
                 </div>
                 <div>
-                    <img src="/images/flower4.jpg" class="five">
+                    <img src="images/flower5.jpg" class="five">
                 </div>
                 <div>
-                    <img src="/images/flower5.jpg" class="six">
+                    <img src="images/flower.jpg" class="six">
                 </div>
             </div>
             <div class="welcome">
@@ -91,7 +91,6 @@
                         <strong>
                             click here
                         </strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, fugiat asperiores veritatis incidunt minus totam iusto amet, quis mollitia doloribus nihil, similique error quas dolorem
-                        accusamus tempore laboriosam. Iste!Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, fugiat asperiores veritatis incidunt minus totam iusto amet, quis mollitia doloribus nihil, similique error quas dolorem
                         accusamus tempore laboriosam. Iste!
                     </p>
                 </div>
@@ -102,65 +101,61 @@
         <div class="content3">
             <div class="card">
                 <h2>
-                    WORKING
+                    Tea cup
                 </h2>
                 <div>
-                    <img src="/images/workingimg1.jpeg">
+                    <img src="images/workingimg1.jpeg">
                 </div>
                 <h4>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    At vero eos et accusamus iy koll
                 </h4>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. ItaquLorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, fugiat asperiores veritatis incidunt minus totam iusto amet, quis mollitia doloribus nihil, similique error quas dolorem
-                    accusamus tempore laboriosam. Iste!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. Itaqu
                 </p>
                 <a href="#">Read More</a>
             </div>
             <div class="card">
                 <h2>
-                    WORKING
+                    Nothing
                 </h2>
                 <div>
-                    <img src="/images/workingimg2.jpeg">
+                    <img src="images/workingimg2.jpeg">
                 </div>
                 <h4>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    At vero eos et accusamus iy koll
                 </h4>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. ItaquLorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, fugiat asperiores veritatis incidunt minus totam iusto amet, quis mollitia doloribus nihil, similique error quas dolorem
-                    accusamus tempore laboriosam. Iste!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. Itaqu
                 </p>
                 <a href="#">Read More</a>
             </div>
             <div class="card">
                 <h2>
-                    WORKING
+                    Fashion
                 </h2>
                 <div>
-                    <img src="/images/workingimg3.jpeg">
+                    <img src="images/workingimg3.jpeg">
                 </div>
                 <h4>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    At vero eos et accusamus iy koll
                 </h4>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. ItaquLorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, fugiat asperiores veritatis incidunt minus totam iusto amet, quis mollitia doloribus nihil, similique error quas dolorem
-                    accusamus tempore laboriosam. Iste!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. Itaqu
                 </p>
                 <a href="#">Read More</a>
             </div>
             <div class="card">
                 <h2>
-                    WORKING
+                    Fine Art
                 </h2>
                 <div>
-                    <img src="/images/workingimg4.jpeg">
+                    <img src="images/workingimg4.jpeg">
                 </div>
                 <h4>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    At vero eos et accusamus iy koll
                 </h4>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. ItaquLorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores, fugiat asperiores veritatis incidunt minus totam iusto amet, quis mollitia doloribus nihil, similique error quas dolorem
-                    accusamus tempore laboriosam. Iste!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque illum magnam ea nam est. Itaqu
                 </p>
                 <a href="#">Read More</a>
             </div>
@@ -170,12 +165,12 @@
         <div class="content4">
             <div>
                 <h2>
-                    Lorem ipsum
+                    Shortly about me
                 </h2>
                 <div class="aboutme">
                     <div class="image">
                         <div>
-                            <img src="/images/globe.jpg">
+                            <img src="images/globe.jpg">
                         </div>
                     </div>
                     <div class="bio">
@@ -192,29 +187,29 @@
                                         &#10146 Comapgins
                                     </li>
                                     <li>
-                                        &#10146 portraits
+                                        &#10146 Comapgins
                                     </li>
                                     <li>
-                                        &#10146 fashion
+                                        &#10146 Comapgins
                                     </li>
                                     <li>
-                                        &#10146 fine art
+                                        &#10146 Comapgins
                                     </li>
                                 </ul>
                             </div>
                             <div>
                                 <ul>
                                     <li>
-                                        &#10146 advertising
+                                        &#10146 Comapgins
                                     </li>
                                     <li>
-                                        &#10146 lifestyle
+                                        &#10146 Comapgins
                                     </li>
                                     <li>
-                                        &#10146 love story
+                                        &#10146 Comapgins
                                     </li>
                                     <li>
-                                        &#10146 landscapes
+                                        &#10146 Comapgins
                                     </li>
                                 </ul>
                             </div>
@@ -229,40 +224,40 @@
                 <div class="photos">
                     <div class="part">
                         <div>
-                            <img src="/images/nature1.jpg">
+                            <img src="images/working1.jpg">
                         </div>
                         <div>
-                            <img src="/images/nature2.jpg">
+                            <img src="images/working2.jpg">
                         </div>
                         <div>
-                            <img src="/images/nature3.jpg">
+                            <img src="images/working3.jpg">
                         </div>
                         <div>
-                            <img src="/images/nature4.jpg">
+                            <img src="images/working4.jpg">
                         </div>
                         <div>
-                            <img src="/images/nature5.jpg">
+                            <img src="images/working5.jpg">
                         </div>
                         <div>
-                            <img src="/images/nature6.jpg">
+                            <img src="images/working6.jpg">
                         </div>
                         <div>
-                            <img src="/images/working1.jpg">
+                            <img src="images/working6.jpg">
                         </div>
                         <div>
-                            <img src="/images/download2.jpg">
+                            <img src="images/working7.jpg">
                         </div>
                         <div>
-                            <img src="/images/download.jpg">
+                            <img src="images/working8.jpg">
                         </div>
                         <div>
-                            <img src="/images/download1.jpg">
+                            <img src="images/working9.jpg">
                         </div>
                         <div>
-                            <img src="/images/working2.jpg">
+                            <img src="images/workingimg5.jpeg">
                         </div>
                         <div>
-                            <img src="/images/working3.jpg">
+                            <img src="images/workingimg4.jpeg">
                         </div>
                     </div>
                 </div>
@@ -272,12 +267,13 @@
     <div class="container5">
         <div class="content5">
             <div class="copy">
-                @copyright2005
+                @copyright
             </div>
             <div class="share">
-                <img src="/images/socialmedia.jpg">
+                <img src="images/logo.jpg">
             </div>
         </div>
     </div>
 </body>
+
 </html>
